# nbatools

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  solution.py  vercel.json
.github/workflows/: ci.yml  production-monitor.yml
api/: assets.py  freshness.py  health.py  index.py  query.py  query_feedback.py  readiness.py  review.py  routes.py  structured_query.py  ui_fallback_asset.py  visual_qa.py
api/dev/: fixtures.py
contracts/: public_http_routes.json  repository_inventory.json
docs/: api_layer.md  architecture_hygiene_audit.md  backend_apply_report.md  correctness_fixes_pass3_report.md  cosmetic_fixes_pass1_report.md  cosmetic_fixes_pass2_report.md  current_state_guide.md  current_state_guide.replacement.md  data_contracts.md  data_freshness_plan.md  determination_layer_audit.md  editorial_polish_pass4_report.md  frontend_apply_report.md  glue_layer_scope_audit.md  index.md  natural_query_cleanup_plan.md  natural_query_final_scope_audit.md  new_shapes_apply_report.md  output_shapes.md  pipeline_runbook.md  primitive_audit_report.md  project_conventions.md  query_guide.md  query_intent_audit.md  query_service_layer.md  quick_query_guide.md  repo_structure_audit.md  repo_structure_final_verdict.md  result_contracts.md  result_contracts_audit.md  roadmap.md  scripts_retirement.md  shape_cleanup_report.md  ui_guide.md
docs/architecture/: api_layer.md  design_system.md  project_conventions.md  query_service_layer.md  structured_result_layer.md
docs/archive/: README.md
docs/audits/: architecture_hygiene_audit.md  glue_layer_scope_audit.md  natural_query_final_scope_audit.md  repo_structure_audit.md  result_contracts_audit.md  scripts_retirement.md
docs/operations/: deployment.md  exploratory_query_review.md  feature_promotion_rules.md  frontend_visual_qa.md  observability.md  parser_examples_full_sweep_protocol.md  parser_routing_growth_guardrails.md  pipeline_runbook.md  query_feedback_privacy.md  query_feedback_review.md  query_smoke_workflow.md  query_validation_map.md  raw_query_answer_qa.md  recovery.md  ui_guide.md  working_and_archive_policy.md
docs/planning/: clutch_source_boundary.md  component_experience_plan.md  data_freshness_plan.md  first_run_and_polish_plan.md  master_completion_plan.md  natural_query_cleanup_plan.md  parser_examples_blocker_inventory.md  parser_examples_completion_plan.md  parser_execution_completion_plan.md  phase_a_gap_inventory.md  phase_a_work_queue.md  phase_b_alias_inventory.md  phase_b_work_queue.md  phase_c1_work_queue.md  phase_c2_leaderboard_inventory.md  phase_c2_work_queue.md  phase_c3_comparison_inventory.md  phase_c3_work_queue.md  phase_c4_finder_inventory.md  phase_c4_work_queue.md  phase_c5_team_split_inventory.md  phase_c5_work_queue.md  phase_c6_streak_occurrence_inventory.md  phase_c6_work_queue.md  phase_c7_head_to_head_playoff_inventory.md  phase_c7_work_queue.md  phase_c8_mobile_inventory.md  (+68 more)
frontend/: index.html  package-lock.json  package.json  test_output.txt  tsconfig.app.json  tsconfig.node.json  vite.config.ts
qa/: exploratory_query_samples.yaml  frontend_copy_corpus.yaml  frontend_visual_qa_corpus.json  frontend_visual_qa_corpus.yaml  raw_query_answer_acceptance_families.yaml  raw_query_answer_corpus.yaml  verified_outliers.yaml
tests/: _parser_equivalence.py  _query_smoke.py  conftest.py  test_admin_feedback_api.py  test_admission_control.py  test_advanced_metric_queries.py  test_aggregate_metric_semantics.py  test_api.py  test_api_request_contracts.py  test_auto_refresh.py  test_backend_apply_patterns.py  test_cli_smoke.py  test_cli_structured_routes.py  test_compound_occurrence_queries.py  test_core_result_table_contracts.py  test_data_generation.py  test_data_source.py  test_dataframe_cache.py  test_date_compare_filters.py  test_default_rule_notes.py  test_deployment_monitoring.py  test_docs_governance.py  test_documented_surfaces.py  test_entity_resolution.py  test_expanded_stat_coverage.py  test_explicit_intent_queries.py  test_exploratory_query_review.py  test_export_query_feedback.py  test_format_output.py  test_freshness_status.py  test_frontend_copy_fixture_contract.py  test_fuzzy_weeks_date_range.py  test_game_identity.py  test_generation_publication.py  test_historical_matchup_queries.py  test_historical_queries.py  test_historical_team_queries.py  test_http_transport_conformance.py  test_leaderboard_filter_contracts.py  test_live_recovery_drill.py  (+69 more)
tools/: check_docs_governance.py  deployment_smoke.py  exploratory_query_review.py  export_query_feedback.py  generate_repository_inventory.py  parser_examples_full_sweep.py  production_monitor.py  query_feedback_privacy.py  raw_query_answer_qa.py
working/: README.md
(+662 files in other folders)
