[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbatools"
version = "0.7.0"
description = "Local-first NBA analytics CLI — query player/team stats with natural language or structured commands."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pandas>=2.2",
    "typer>=0.12",
    "nba_api>=1.5",
    "boto3>=1.34",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-testmon>=2.1",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "httpx>=0.28",
]

[project.scripts]
nbatools-cli = "nbatools.cli:app"
nbatools-api = "nbatools.api_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nbatools = ["ui/dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "needs_data: skip when local CSV data files are not available",
    "parser: pure parsing, entity resolution, boolean query parsing",
    "query: natural query routing, intent detection, orchestration",
    "engine: core command computation, metrics, records, streaks, pipeline",
    "api: HTTP API layer tests",
    "output: formatting, result contracts, export",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
